--- a/css/social-links-profile.css
+++ b/css/social-links-profile.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Lexend Deca", sans-serif;
+    font-family: "Inter", sans-serif;
     background-color: #141414ff;
 }
 * {
